--- a/static/index.html
+++ b/static/index.html
@@ -151,7 +151,7 @@
                 window.data = data;
                 setmin(globe)();
                 
-//                window.setInterval(update_data(globe), 1000);
+                window.setTimeout(update_data(globe), 1000);
               }
             }
           };
