Added info message

--- a/static/index.html
+++ b/static/index.html
@@ -116,6 +116,15 @@
     Who is using Idealist.org
   </div>
 
+  <a id="about_toggle">About this project</a>
+
+  <div id="info">
+    Built using <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong>
+    <span class="bull">&bull;</span>
+    Data acquired using <a href="https://github.com/greghaynes/GeoIPAnalytics">GeoIpAnalytics</a>
+  </div>
+
+  
   <script type="text/javascript" src="/third-party/Three/ThreeWebGL.js"></script>
   <script type="text/javascript" src="/third-party/Three/ThreeExtras.js"></script>
   <script type="text/javascript" src="/third-party/Three/RequestAnimationFrame.js"></script>
