Fix index.html comment to be html valid

--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,4 @@
-/* This is a modified version of the index.html in the webgl-globe project */
-
+<!-- This is a modified version of the index.html from the webgl-globe project --!>
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -12,8 +11,8 @@
       body {
         margin: 0;
         padding: 0;
-        background: #000000 url(/loading.gif) center center no-repeat;
-        color: #ffffff;
+        background: #FFF url(/loading.gif) center center no-repeat;
+        color: #000;
         font-family: sans-serif;
         font-size: 13px;
         line-height: 20px;
@@ -117,8 +116,6 @@
   <div id="title">
     Who is using Idealist.org
   </div>
-
-  <a id="about_toggle">About this project</a>
 
   <div id="info">
     Built using <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong>
