Changed color scheme to white on black

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
         font-size: 11px;
         position: absolute;
         bottom: 5px;
-        background-color: rgba(0,0,0,0.8);
+        background-color: rgba(0,0,0,0.2);
         border-radius: 3px;
         right: 10px;
         padding: 10px;
@@ -44,7 +44,7 @@
       }
 
       a {
-        color: #aaa;
+        color: #222;
         text-decoration: none;
       }
       a:hover {
@@ -120,7 +120,7 @@
   <div id="info">
     Built using <strong><a href="http://www.chromeexperiments.com/globe">WebGL Globe</a></strong>
     <span class="bull">&bull;</span>
-    Data acquired using <a href="https://github.com/greghaynes/GeoIPAnalytics">GeoIpAnalytics</a>
+    Data acquired using <strong><a href="https://github.com/greghaynes/GeoIPAnalytics">GeoIpAnalytics</a></strong>
   </div>
 
   
