--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
       body {
         margin: 0;
         padding: 0;
-        background: #DDD url(/loading.gif) center center no-repeat;
+        background: #777 url(/loading.gif) center center no-repeat;
         color: #000;
         font-family: sans-serif;
         font-size: 13px;
